add asset and assetcontent UI as well as views done

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -29,7 +29,7 @@
 
     <script type="text/javascript" src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
-    <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.topbar.js">
+    <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.topbar.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
     </script>
     <!-- Foundation 5 - Responsive CSS Framework http://foundation.zurb.com/docs/css.html-->
@@ -63,7 +63,7 @@
 
   <script type="text/javascript">
     // Initialize Foundation CSS
-      // $(document).foundation();
+      $(document).foundation();
 
     // Register global ajax start and complete events to show ajax loader when request is in process
       $(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
