--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -1,3 +1,5 @@
+
+
 <div class="row" style="margin-top: 25px; margin-bottom: 25px;">
             <a class="close-reveal-modal" aria-label="Close">&#215;</a>
             <div class="small-12 colums" >
@@ -7,15 +9,26 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 large-6 columns">
-                <label>Asset name
-                    <input type="text" placeholder=""  id = "asset-name" name="asset_name" />
+                <label>
+                    {% if asset_obj.name %}
+                        {{asset_obj.name}}
+                    {% else %}
+                       Asset name 
+                       <input type="text" placeholder=""  id = "asset-name" name="asset_name" />
+                    {% endif %}
+
                 </label>
             </div>
         </div>
         <div class="row">
             <div class="small-12 medium-6 large-6 columns">
-                <label>Asset description
-                    <input type="text" placeholder="" id = "asset-descid" name="asset_desc" />
+                <label> 
+                    {% if asset_obj.content %}
+                        {{asset_obj.content}}
+                    {% else %}
+                        Asset description
+                        <input type="text" placeholder="" id = "asset-descid" name="asset_desc" />
+                    {% endif %}
                 </label>
             </div>
         </div>
@@ -32,7 +45,7 @@
                     <Select name="asset_objectives" id = "asset_objectivesid" placeholder="Select topics" require>
                         <option value="">--- Select Topic ---</option>
                         {% for each_topic in topic_nodes %}
-                        <option value="{{each_topic.name}}">
+                        <option value="{{each_topic.pk}}">
                             {{each_topic.name}}
                         </option>
                         {% endfor %}
@@ -42,27 +55,30 @@
         </div>
 
         <hr />
+    {% if asset_obj %}
 
         <h3>Resources for this asset</h3>
         <div class="row">
+            Add asset content
+            <div class="transcript_files">
+                <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
+                    <input type="file" id="docFile" placeholder="" name="work" />
+                    <input type="button" id="" onclick="save_form()" value="Save"/>
+                    <input type="hidden" name="context_name" value="{{title}}">
+                </form>
+             </div>
+                {% for each in asset_content_list.grel_node %}
             <div class="small-12 medium-6 large-3 columns">
+                    
                 <div class="asset_tile">
                     <div class="asset_preview"></div>
                     <div class="asset_text">
-                        <div class="asset_title">Asset Title</div>
+                        <div class="asset_title">{{each.name}}</div>
                         <div class="asset_desc">This is a long description</div>
                     </div>
                 </div>
             </div>
-            <div class="small-12 medium-6 large-3 columns">
-                <div class="asset_tile">
-                    <div class="asset_preview"></div>
-                    <div class="asset_text">
-                        <div class="asset_title">Asset Title</div>
-                        <div class="asset_desc">This is a long description</div>
-                    </div>
-                </div>
-            </div>
+                {% endfor %} 
         </div>
 
         <hr />
@@ -92,12 +108,12 @@
                 <div class="preview_asset"></div>
             </div>
         </div>
+    {% endif %}
 <script type="text/javascript">
     $( ".save-asset" ).click(function() {
         asset_name = $("#asset-name").val();
         asset_description = $("#asset-descid").val();
-        asset_objective =  $('#asset_objectivesid').find(":selected").text();
-        alert(asset_description);
+        asset_objective =  $('#asset_objectivesid').find(':selected').attr('value');
         $.ajax({
               type: "POST",
               data:{ "works":"works",
@@ -109,9 +125,9 @@
               url: "{% url 'create_edit_asset' group_id %}",
               datatype: "html",
               success: function(data) {
-                $('#addAsset').html(data);
-                $('#addAsset').foundation('reveal', 'open');
-                alert(data);
+                // $('#addAsset').html(data);
+                // $('#addAsset').foundation('reveal', 'open');
+                $('#addAsset').append(data);
             }
 
       });
