--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -10,6 +10,7 @@
 </div>
 <div class="row"> 
       {% for each in asset_nodes %}
+      <a href="{% url 'asset_detail' group_id each.pk %}">
       <div class="small-12 medium-6 large-3 columns">
         <div class="asset_tile">
             <div class="asset_preview"></div>
@@ -19,5 +20,6 @@
             </div>
         </div>
     </div>
+    </a>
     {% endfor %}
 </div>
