--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -55,8 +55,7 @@
         </div>
 
         <hr />
-    {% if asset_obj %}
-
+    <div class="asset-content-area"{% if not asset_obj %} style="display:none"{% endif %}>
         <h3>Resources for this asset</h3>
         <div class="row">
             Add asset content
@@ -65,9 +64,11 @@
                     <input type="file" id="docFile" placeholder="" name="work" />
                     <input type="button" id="" onclick="save_form()" value="Save"/>
                     <input type="hidden" name="context_name" value="{{title}}">
+                    <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
                 </form>
              </div>
-                {% for each in asset_content_list.grel_node %}
+        {% for each in asset_content_list.grel_node %}
+            <a href="{% url 'assetcontent_detail' group_id asset_obj.pk each.pk %}">
             <div class="small-12 medium-6 large-3 columns">
                     
                 <div class="asset_tile">
@@ -87,28 +88,11 @@
             Resource Name
         </h6>
         <div class="row">
-            <div class="small-12 medium-6 large-6 columns">
-                <label>Resource name
-                    <input type="text" placeholder="" name="resource_name" />
-                </label>
-                <label>Upload Transcript
-                </label>
-                <div class="transcript_files">
-                    <input type="file" placeholder="" name="transcript_file" />
-                    <span class="add_more_files"><u>+ Transcript</u></span>
-                </div>
-                <label>Upload Subtitle
-                </label>
-                <div class="subtitle_files">
-                    <input type="file" placeholder="" name="subtitle_files" />
-                    <span class="add_more_files"><u>+ Subtitle</u></span>
-                </div>
-            </div>
-            <div class="small-12 medium-6 large-6 columns">
-                <div class="preview_asset"></div>
-            </div>
+          {% if node %}
+            {% include "ndf/asset_content_detail.html" with node=node %}
+        {%  endif %}
         </div>
-    {% endif %}
+    </div>
 <script type="text/javascript">
     $( ".save-asset" ).click(function() {
         asset_name = $("#asset-name").val();
@@ -127,10 +111,89 @@
               success: function(data) {
                 // $('#addAsset').html(data);
                 // $('#addAsset').foundation('reveal', 'open');
-                $('#addAsset').append(data);
+                $('.asset-content-area').css('display', 'block')
+                alert(data)
+                $('.asset_obj_val').attr('data-asset-obj-val',data);
             }
 
       });
 
     });
+</script>
+<script type="text/javascript">
+  var form = document.getElementById('docPost');
+  var fileSelect = document.getElementById('docFile');
+  // var uploadButton = document.getElementById('submitpostid');
+        function save_form(event) {
+        assetval = $('.asset_obj_val').attr('data-asset-obj-val');
+        // Update button text.
+        // uploadButton.innerHTML = 'Uploading...';
+
+        // Get the selected files from the input.
+        var files = fileSelect.files;
+
+        // Create a new FormData object.
+        var formData = new FormData();
+
+        // Loop through each of the selected files.
+        for (var i = 0; i < files.length; i++) {
+          var file = files[i];
+
+          // // Check the file type.
+          // if (!file.type.match('image.*')) {  continue; }
+
+          // Add the file to the request.
+          formData.append('filehive', file, file.name);
+        }
+
+        // appending csrfmiddlewaretoken and user-id
+        formData.append('csrfmiddlewaretoken', '{{csrf_token}}');
+        formData.append('user','{{request.user.id}}');
+        if(!"{{asset_obj}}"){
+            formData.append('asset_obj',assetval);
+        }
+        else{
+            formData.append('asset_obj','{{asset_obj}}');
+        }
+        // Set up the request.
+        xhr = new XMLHttpRequest();
+
+        // Open the connection.
+        xhr.open('POST', "{% url 'add_assetcontent' group_id %}", true);
+
+        // Set up a handler for when the request finishes sucessfully.
+        xhr.onload = function () {
+          if (xhr.status === 200) 
+          {
+            // File(s) uploaded.
+           // if file is not uploaded sucessfully
+            if(xhr.responseText == "UploadError")
+            {
+               alert("Error occurred");
+            }
+            // check if image is not in the list, add it.
+            else if(xhr.responseText )
+            {
+              alert(xhr.responseText);
+            }
+
+            uploadButton.innerHTML = 'Upload';
+
+            // updating metadata of files, if file is uploaded sucessfully
+            // if(xhr.responseText != "UploadError")
+            // {
+            //   // alert('xhr.responseText != "UploadError"');
+            // }
+          }
+          else
+          {
+            alert('An error occurred!');
+          }
+        };
+
+        // Send the Data.
+        xhr.send(formData);
+      }
+
+  
 </script>
