--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -69,7 +69,7 @@
                         {% if title == "asset_list" %}
                             {% include "ndf/assets.html" %}
                         {% endif %}
-                        {% if title == "asset_detail" %}
+                        {% if title == "asset_detail" or title == "asset_content_detail" %}
                             {% include "ndf/add_asset.html" %}
                         {% endif %}
                     </div>
@@ -133,80 +133,6 @@
                       });
             });
     </script>
-    <script type="text/javascript">
-  var form = document.getElementById('docPost');
-  var fileSelect = document.getElementById('docFile');
-  // var uploadButton = document.getElementById('submitpostid');
-        function save_form(event) {
-        alert("sssssssssssssssssssss")
-
-        // Update button text.
-        // uploadButton.innerHTML = 'Uploading...';
-
-        // Get the selected files from the input.
-        var files = fileSelect.files;
-
-        // Create a new FormData object.
-        var formData = new FormData();
-
-        // Loop through each of the selected files.
-        for (var i = 0; i < files.length; i++) {
-          var file = files[i];
-
-          // // Check the file type.
-          // if (!file.type.match('image.*')) {  continue; }
-
-          // Add the file to the request.
-          formData.append('filehive', file, file.name);
-        }
-
-        // appending csrfmiddlewaretoken and user-id
-        formData.append('csrfmiddlewaretoken', '{{csrf_token}}');
-        formData.append('user','{{request.user.id}}');
-        formData.append('asset_obj','{{asset_obj}}');
-        formData.append('curr_time','{{asset_obj}}');
-
-        // Set up the request.
-        xhr = new XMLHttpRequest();
-
-        // Open the connection.
-        xhr.open('POST', "{% url 'add_assetcontent' group_id %}", true);
-
-        // Set up a handler for when the request finishes sucessfully.
-        xhr.onload = function () {
-          if (xhr.status === 200) 
-          {
-            // File(s) uploaded.
-           // if file is not uploaded sucessfully
-            if(xhr.responseText == "UploadError")
-            {
-               alert("Error occurred");
-            }
-            // check if image is not in the list, add it.
-            else if(xhr.responseText )
-            {
-              alert(xhr.responseText);
-            }
-
-            uploadButton.innerHTML = 'Upload';
-
-            // updating metadata of files, if file is uploaded sucessfully
-            // if(xhr.responseText != "UploadError")
-            // {
-            //   // alert('xhr.responseText != "UploadError"');
-            // }
-          }
-          else
-          {
-            alert('An error occurred!');
-          }
-        };
-
-        // Send the Data.
-        xhr.send(formData);
-      }
-
-  
-</script>
+    
 
 {% endblock body_content %}
