--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -30,6 +30,280 @@ body {
 }
 
 
+/* Landing page */
+.landing_page {
+  position: relative;
+  text-align: center;
+
+  .panel {
+    background-color: inherit;
+    border: none;
+  }
+
+  .landing_page_background {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+
+  }
+
+
+  .clix_brief {
+    text-align: left;
+    padding: 20px 5%;
+
+    img {
+      margin: 30px 20px;
+      height: 70px;
+      @media screen and (max-width: 450px) {
+        margin: 25px 10px;
+        height: 55px;
+      }
+    }
+    p {
+      color: #fff;
+      font-size: 26px;
+      @media screen and (max-width: 450px) {
+        font-size: 18px;
+      }
+      font-weight: 300;
+      font-family: 'ubuntu-light';
+    }
+  }
+
+  .invitation_to_clix {
+    background-color: rgba(255,255,255, 0.92);
+    border-radius: 10px;
+    width: 100%;
+    margin: 20px auto;
+    @media screen and (min-width: 1025px) {
+      margin: 30px;
+    }
+    text-align: left;
+    padding: 30px 40px 21px;
+   // box-shadow: 0px 0px 30px rgba(0, 0,0, 0.5);
+
+    >span {
+      font-family: 'ubuntu-bold';
+      color: #6658af;
+      font-size: 18px;
+      font-weight: bold;
+      letter-spacing: 0.2px;
+      text-transform: uppercase;
+      display: inline-block;
+      vertical-align: middle;
+    }
+    p {
+      color: #b0108d;
+      font-size: 21px;
+      padding: 25px 0px 30px;
+      font-weight: 300;
+      font-family: 'ubuntu-light';
+    }
+
+    img {
+      height: 30px;
+    }
+    form {
+      margin-top: 30px;
+
+      input  {
+        font-size: 24px;
+        height: 45px;
+        margin: 5px 0px 24px;
+      }
+    }
+  .flowers {
+    left: 50px;
+    height: 200px;
+    width:100%;
+    @media screen and (max-width: 450px) {
+      //height: 50px;
+      width: 100%;
+    }
+    @media screen and (min-width: 451px) and (max-width: 1025px) {
+     //height:50px;
+     width:100%;
+    }
+    bottom: 0px;
+    opacity: 0.6;
+  }
+  .bees {
+    position: absolute;
+    top: 5px;
+    right: 50px;
+    height: 100px;
+    float: left;
+    
+    @media screen and (max-width: 450px) {
+      right: 15px;
+      height: 50px;
+    }
+  }
+
+  
+  .landing-page-text {
+    color: #6153ae;
+
+    p {
+      font-size: 18px;
+    }
+  }
+}
+    input.button {
+      font-size: 25px;
+      border-radius: 10px;
+      font-family: 'Rubik';
+      text-transform: uppercase;
+      background-color: $primary-blue;
+      margin-top: 80px;
+    }
+    a.grey {
+      color: #999;
+      /*display: inline-block;
+      padding: 6px 12px;
+      background: #B0108D;
+      color: #fff;
+      font-weight: 600;
+      font-family: 'ubuntu-bold';
+      text-transform: uppercase;*/
+    }
+  }
+
+
+/* Login Page */
+
+
+.login-page {
+    position: relative;
+    /*background: url(/static/ndf/images/login-background.png);*/
+    background-size: 100% 100%;
+    min-height: 100vh;
+
+    .login-page-opacity {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        opacity: 0.6;
+        //background: -webkit-gradient(linear, left top, right top, from(#E9A900), to(#B0108D));
+        //background: -webkit-linear-gradient(left, #E9A900, #B0108D);
+        //background: -moz-linear-gradient(left, #E9A900, #B0108D);
+        //background: -ms-linear-gradient(left, #E9A900, #B0108D);
+        //background: -o-linear-gradient(left, #E9A900, #B0108D);
+    }
+
+    .login-page-form {
+        background-color: #fff;
+        border-radius: 10px;
+        padding: 10px 40px;
+        opacity: 0.95;
+        max-width: 90%;
+        width: 350px;
+        margin: 100px auto;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+
+        .login-page-header {
+            img {
+                height: 80px;
+                width: 280px;
+            }
+            span {
+                display: block;
+                text-transform: uppercase;
+                color: #d5d5d5;
+                font-weight: 600;
+                letter-spacing: 1px;
+            }
+        }
+        .login-captcha {
+          margin: 10px 0;
+
+          >div {
+            display: inline-block;
+            vertical-align: top;
+          }
+          .fi-refresh {
+            color: #A0148E;
+            font-size: 25px;
+          }
+          #captcha-content {
+              th{
+                display: none;
+              }
+              td>input {
+                display: inline-block;
+
+                &#id_captcha_1 {
+                  width: 130px;
+                }
+              }
+          }
+        }
+        .login-button {
+            .button {
+              font-size: 15px;
+              background-color: #B1B1B1;
+              font-weight: 600;
+              border-bottom: 3.5px solid #DADADA;
+              border-radius: 5px;
+              padding: 9px;
+
+              &:hover {
+                background-color: #CC1AB5;
+                border-color: #881378;
+              }
+            }
+        }
+
+        .explore-button {
+            .button {
+              font-size: 15px;
+              background-color: #B1B1B1;
+              font-weight: 600;
+              border-bottom: 3.5px solid #DADADA;
+              border-radius: 5px;
+              padding: 9px;
+              margin-top: 160px;
+
+              &:hover {
+                background-color: #CC1AB5;
+                border-color: #881378;
+              }
+            }
+        }
+        .forgot-password {
+          label {
+            font-size: 10px;
+            text-align: center;
+            text-decoration: underline;
+          }
+        }
+        .register-user {
+          label {
+            font-size: 10px;
+            margin: 10px 0px 0px;
+          }
+          span {
+            color: #A0148E;
+          }
+        }
+    }
+}
+
+
+.explore-button {
+      font-size: 25px;
+      border-radius: 10px;
+      font-family: 'Rubik';
+      text-transform: uppercase;
+      background-color: $primary-blue;
+      margin-top: 80px;
+      color: $secondry-blue;
+      
+}
+
+
 /*Overridding foundation css*/
 
 .top-bar, .top-bar .name {
