--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -23,7 +23,7 @@
 				</a>
 				{% if is_gstaff %}
 					<a href="{% url 'explore_basecourses' %}" class="button {%if title == 'base courses'%} active{% endif %}">
-						Base Course
+						Draft Course
 					</a>
 				{% endif %}
 			</div>
@@ -45,11 +45,14 @@
 			<!--li class="card-image-wrapper"-->
 			{% if title == "base courses" %}
 				{% if "Course" in each_obj.member_of_names_list %}						{% include card with resource=each_obj has_logo=True no_footer=True url_name="course_detail" first_arg=groupid second_arg=each_obj.pk  %}
-				{% elif "BaseCourseGroup" in each_obj.member_of_names_list %}
-					{% include card with resource=each_obj has_logo=True no_footer=True url_name="groupchange" first_arg=each_obj.pk  %}
+				{% elif "base_unit" in each_obj.member_of_names_list %}
+
+					{# {% include card with resource=each_obj has_logo=True no_footer=True url_name="groupchange" first_arg=each_obj.pk  %} #}
+					{% include card with resource=each_obj is_event=True no_footer=True has_prof_pic=True url_name="unit_detail" first_arg=groupid first_arg=groupid second_arg=each_obj.pk %}
+
 				{% endif %}
 				{% else %}
-					{% include card with resource=each_obj is_event=True no_footer=True has_prof_pic=True url_name="unit_detail" first_arg=groupid first_arg=groupid second_arg=each_obj.pk %}
+					{# {% include card with resource=each_obj is_event=True no_footer=True has_prof_pic=True url_name="unit_detail" first_arg=groupid first_arg=groupid second_arg=each_obj.pk %} #}
 
 					{# {% include card with resource=each_obj is_event=True no_footer=True has_prof_pic=True url_name="groupchange" first_arg=each_obj.pk  next_session=True %} #}
 				{% endif %}
