set urls to tabs in course/group dashboard. open tabs and load template based on title

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -14,6 +14,8 @@
   
 {% endblock %}
 {% block body_content %}
+{% get_group_object groupid as group_object %}
+
 {% get_breadcrumb request.path %}
     <div class="row group_content">
         <div class="small-12 columns">
@@ -23,6 +25,7 @@
             <div class="row">
                 <div class="small-12 columns group_header">
                     <div class="group_title left">English Curriculum</div>
+                    <!-- Join/Enroll options -->
                     <div class="group_actions right">
                         {% if user_access == "allow" %}
                             <button class="button-hollow-white" disabled="disabled">Enrolled</button>
@@ -45,11 +48,13 @@
                 <div class="small-12 columns group_sections">
                     <ul class="horizontal_tabs_gstudio">
                         <li>
-                            <a href="#group_overview" class="selected">Overview</a>
-                        </li><li>
-                            <a href="#group_elibrary">eLibrary</a>
-                        </li><li {% ifequal title 'notebook' %}class="selected"{% endifequal %}">
-                            <a href="{% url 'course_notebook' group_id %}">Blog</a>
+                            <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>eLibrary</a>
+                        </li>
+                        <li >
+                            <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Blog</a>
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
 <!--                         <li>
@@ -79,6 +84,7 @@
             </div>
             <div class="row">
                 <div class="small-12 columns group_sections_content">
+
                     <div id="group_overview">
                         {% if title == "about" %}
                             {% include "ndf/course_about.html" %}
