--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -642,10 +642,12 @@ ul.horizontal_tabs_gstudio {
             font-size: 15px;
             letter-spacing: 0.5px;
             font-weight: 600;
+            overflow: hidden;
         }
         .asset_desc {
             font-size: 13px;
             letter-spacing: 0.3px;
+            overflow: hidden;
         }
     }
 }
@@ -699,6 +701,8 @@ input[type="file"] {
     border-radius: 4px;
     border: 1px solid #ccc;
 }
+
+
 /*  Buttons custom css */
 .button-hollow-white {
     background: inherit;
@@ -719,6 +723,26 @@ input[type="file"] {
     background: #fff;
     border: 2px solid #aaa;
     font-size: 14px;
+}
+
+.asset-save-button {
+    color: $primary-orange;
+    display: inline-block;
+    border: 1px solid #999;
+    border-radius: 5px;
+    padding: 8px 10px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 10pt;
+    color: #cc7769;
+    border-color: #cc7769;
+    float: right;
+    background: #fff;
+    margin-right: 5px;
+    margin-top: 5px;
 }
 
 .blue-white-button {
