--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="small-12 columns group_header">
-                    <div class="group_title left">English Curriculum</div>
+                    <div class="group_title left">Unit EB</div>
                     <!-- Join/Enroll options -->
                     <div class="group_actions right">
                         {% if user_access == "allow" %}
@@ -51,11 +51,17 @@
                             <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a>
                         </li>
                         <li>
-                            <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>eLibrary</a>
+                            <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a>
                         </li>
                         <li >
-                            <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Blog</a>
+                            <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
                             <!-- <a href="#group_blog">Blog</a> -->
+                        </li>
+                        <li >
+                            <a href="#">Lessons</a>
+                            <!-- <a href="#group_blog">Blog</a> -->
+                        </li><li>
+                            <a href="#group_pages">Pages</a>
                         </li>
 <!--                         <li>
                             <a href="#group_overview" class="selected">Overview</a>
