hide filter from asset listiing

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -1,9 +1,9 @@
 <div class="elibrary-actions">
-    <button type="button" class="orange-button">
+<!--     <button type="button" class="orange-button">
         <i class="fi-filter"> </i>
         Filter
     </button>
-    <button type="button" class="right orange-button createAsset">
+ -->    <button type="button" class="right orange-button createAsset">
         <i class="fi-plus"> </i>
         Add Asset
     </button>
