subtitle track added to video

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -62,6 +62,7 @@
         formData.append('csrfmiddlewaretoken', '{{csrf_token}}');
         formData.append('user','{{request.user.id}}');
         formData.append('if_subtitle','True');
+        formData.append('assetcontentid','{{node.pk}}');
         
         if(!"{{asset_obj}}"){
             formData.append('asset_obj',assetval);
