--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -1,26 +1,27 @@
         <h6>
-            <b><u>All Assets</u>&nbsp; ></b>
+            <b>&nbsp; &nbsp;<u>All Assets</u>&nbsp; ></b>
             Resource Name
         </h6>
         <div class="row">
             <div class="small-12 medium-6 large-6 columns">
-                <label>Resource name     {{node.name}}
-                    <input type="text" placeholder="" name="resource_name" />
+                <label>Resource name: <b> {{node.name}} </b>
+                    
+                    <!--<input type="text" placeholder="" name="resource_name" />-->
                 </label>
                 <label>Upload Transcript
                 </label>
                 <div class="transcript_files">
                     <input type="file" placeholder="" name="transcript_file" />
-                    <span class="add_more_files"><u>+ Transcript</u></span>
+                    <span class="add_more_files">&nbsp;<u> + Transcript</u></span>
                 </div>
                 <label>Upload Subtitle
                 </label>
                 <div class="subtitle_files">
                     <form class="dropzone" id ="docsubtitle" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
                         <input type="file" id="docsubtitlefile" placeholder="" name="doc_f" />
-                        <input type="button" id="" onclick="save_asset_cont_data()" value="Save"/>
                         <span class="add_more_files"><u>+ Subtitle</u></span>
                     </form>
+                    <input type="asset-save-button" id="" class="orange-button" onclick="save_asset_cont_data()" value="Save"/>
                 </div>
             </div>
             <div class="small-12 medium-6 large-6 columns">
