icon added for asset

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -56,7 +56,7 @@
                 
                 {% else %}
  
-                    <label>Tags
+                    <label>KeyWords
                         <input type="text" placeholder="" name="asset_tags" />
                     </label>
                 {% endif %}
