create unit link updated

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -31,7 +31,7 @@
 		{% if title == "base courses" and is_gstaff %}
 		<div class="small-12 medium-7 columns">
 			<div style="display: inline-block;">
-				<a class="tiny button radius right" href="{% url 'create_edit' groupid %}"><i class="fi-plus"></i>{% trans " Create Course" %}</a>
+				<a class="tiny button radius right" href="{% url 'unit_create_edit' groupid %}"><i class="fi-plus"></i>{% trans " Create Unit" %}</a>
 			</div>
 		</div>
 		{% endif %}
